# spheres

./: .gitlab-ci.yml  .travis.yml  README.md  distributeAssets.sh  spheresDoxygenDocs
build_androidvr/: get_externals.sh  gradle.properties  settings.gradle
build_androidvr/app/: CMakeLists.txt  build.gradle
build_androidvr/app/src/main/: AndroidManifest.xml
build_androidvr/app/src/main/assets/models/: debug_box.blend1  debug_box.mtl
build_androidvr/app/src/main/assets/shader/: fs.txt  particles_fs.txt  particles_vtx.txt  vtx.txt
build_androidvr/app/src/main/cpp/: MoveCubeTransform.h  VRTestBenchFramework.h  native-lib.cpp
build_androidvr/app/src/main/java/com/onetwofivegames/spherestestbenchandroidvr/: JavaLog.java  SpheresVRActivity.java
build_androidvr/app/src/main/res/layout/: activity_spheres_vr.xml
build_androidvr/app/src/main/res/values/: strings.xml
build_androidvr/gradle/wrapper/: gradle-wrapper.properties
ingame_assets/models/: debugbox.blend
render_tests/: runRenderTests.sh
src/: CMakeLists.txt  CMake_Defaults.txt  CMake_Externals.txt
src/SpheresEngine/: CMakeLists.txt
src/SpheresEngine/android/SpheresEngine/: AndroidFramework.h  AndroidVRFramework.cpp  AndroidVRFramework.h  JavaInterface.h  LogInternal.h  Timing.h  VectorTypesGvr.h
src/SpheresEngine/android/SpheresEngine/InputEngine/: DaydreamController.cpp  DaydreamController.h
src/SpheresEngine/android/SpheresEngine/RenderEngine/: OpenGLInclude.h  RenderBackendAndroid.cpp  RenderBackendAndroid.h  RenderBackendAndroidVR.cpp  RenderBackendAndroidVR.h  RenderBackendAndroidVRDetails.h
src/SpheresEngine/android/SpheresEngine/RenderEngine/Targets/: VREyeTarget.cpp  VREyeTarget.h  VREyeTargetData.h
src/SpheresEngine/android/SpheresEngine/ResourceEngine/: ResourceEngine.cpp  ResourceEngine.h
src/SpheresEngine/android/SpheresEngine/SoundEngine/: SoundEngine.h  SoundPtr.h
src/SpheresEngine/common/SpheresEngine/: Engines.h  LimitedTiming.h  Log.cpp  Log.h  LogMessageLevel.h  Signals.h  ThreadedGameLoop.cpp  ThreadedGameLoop.h  TickAction.h  TimingBase.h  Util.h  VectorTypes.cpp  VectorTypes.h
src/SpheresEngine/common/SpheresEngine/AnimationEngine/: Animation.h  AnimationEngine.cpp  AnimationEngine.h  Sequence.cpp  Sequence.h
src/SpheresEngine/common/SpheresEngine/DataTypes/: Resolution.h  RingBuffer.h  StaticVector.h
src/SpheresEngine/common/SpheresEngine/EntityEngine/: Entity.cpp  Entity.h  EntityEngine.cpp  EntityEngine.h  EntityFactory.h  EntityList.h  TimeSliceAction.h
src/SpheresEngine/common/SpheresEngine/EntityEngine/CommonEntities/: CameraEntity.h  CollisionMixin.h  PositionMixin.h  PositionedEntity.h  RotationMixin.h
src/SpheresEngine/common/SpheresEngine/Exceptions/: BaseException.h
src/SpheresEngine/common/SpheresEngine/InputEngine/: Input.h  InputAction.h  InputEngine.cpp  InputEngine.h  InputSource.h  InputTransformer.h  UserId.h
src/SpheresEngine/common/SpheresEngine/Pathfinding/: Node.h  NodeList.h  Pathfinding.cpp  Pathfinding.h
src/SpheresEngine/common/SpheresEngine/Performance/: BranchPredict.h  SectionTimer.cpp  SectionTimer.h
src/SpheresEngine/common/SpheresEngine/Physics/: PhysicsEngine.h
src/SpheresEngine/common/SpheresEngine/PhysicsEngine/: PhysicsEngine.cpp  PhysicsEngine.h
src/SpheresEngine/common/SpheresEngine/RenderEngine/: Mesh.h  RenderBackendBase.h  RenderEngine.cpp  RenderEngine.h  RendererVisualChange.h  Texture.cpp  Texture.h  TextureRef.h  VisualRendererBase.h
src/SpheresEngine/common/SpheresEngine/RenderEngine/CommonOpenGL/: GLSupport.h  MeshBackend.cpp  MeshBackend.h  MeshRenderer.cpp  MeshRenderer.h  ParticlesRenderer.cpp  ParticlesRenderer.h  ShaderBackend.cpp  ShaderBackend.h  ShaderUserData.h
src/SpheresEngine/common/SpheresEngine/RenderEngine/Targets/: CameraTarget.cpp  CameraTarget.h  CameraTargetData.h  RenderTargetBase.h
src/SpheresEngine/common/SpheresEngine/ResourceEngine/: MeshData.h  MeshLoader.cpp  MeshLoader.h  PropertyTreeSupport.h  ResourceEngineAbstract.cpp  ResourceEngineAbstract.h
src/SpheresEngine/common/SpheresEngine/SoundEngine/: PlayHandle.h  SoundEngineAbstract.h
src/SpheresEngine/common/SpheresEngine/StateEngine/: Aspect.h
src/SpheresEngine/common/SpheresEngine/Threading/: AtomicDoubleBuffer.h
src/SpheresEngine/common/SpheresEngine/Visuals/: MeshVisual.cpp  MeshVisual.h  MeshVisualData.h  ParticleSystemModels.h  ParticleSystemVisual.cpp  ParticleSystemVisual.h  ParticleSystemVisualList.h  VisualBase.h  VisualDataBase.h  VisualDataExtract.h
src/SpheresEngine/common/SpheresEngine/Visuals/ParticleModels/: Milkyway.cpp  Milkyway.h
src/SpheresEngine/sdl/SpheresEngine/: LogInternal.h  Timing.h
src/SpheresEngine/sdl/SpheresEngine/InputEngine/: SdlSource.cpp  SdlSource.h
src/SpheresEngine/sdl/SpheresEngine/RenderEngine/: OpenGLInclude.h  RenderBackendSDL.cpp  RenderBackendSDL.h  RenderBackendSDLDetails.h  RenderBackendSDLTesting.cpp  RenderBackendSDLTesting.h
src/SpheresEngine/sdl/SpheresEngine/ResourceEngine/: ResourceEngine.cpp  ResourceEngine.h  ResourceEngineTesting.h
src/SpheresEngine/sdl/SpheresEngine/SoundEngine/: SoundPtr.h
src/SpheresTest/: CMakeLists.txt
src/SpheresTest/src/: test_main.cpp
src/SpheresTest/src/SpheresEngine/: EntityEngineTest.cpp  MeshLoaderTest.cpp  MeshRendererTest.cpp  PathfindingTest.cpp  SignalsTest.cpp  TestEngines.h  TimeSliceActionTest.cpp  VisualDataExtractTest.cpp
src/SpheresTest/src/SpheresEngine/AnimationEngine/: AnimationTest.cpp  SequenceTest.cpp
src/SpheresTest/src/SpheresEngine/DataTypes/: RingBufferTest.cpp  StaticVectorTest.cpp
src/SpheresTest/src/SpheresEngine/Entities/: CameraEntityTest.cpp  PositionedEntityTest.cpp
src/SpheresTest/src/SpheresEngine/InputEngine/: InputEngineTest.cpp
src/SpheresTest/src/SpheresEngine/RenderEngine/: ShaderBackendTest.cpp
src/SpheresTest/src/SpheresEngine/ResourceEngine/: ResourceEngineTest.cpp
src/SpheresTestBench/: CMakeLists.txt
src/SpheresTestBench/src/: BenchmarkBase.h  CubeBenchmark.h  ExitBenchmarkInputTransform.h  MilkywayBenchmark.h  RotateCubeTransform.h  main.cpp
(+4 files in other folders)
